--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,21 @@
+.page {
+  height: 100vh;
+  font-family: Inter, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .dark-mode {
+  transition: background-color 2s ease;
   background-color: black;
 }
 
-body {
-  font-family: "Inter", sans-serif;
+.light-mode {
+  background-color: (230, 22%, 74%);
+}
+
+.container {
+  width: 80%;
+  margin: auto;
 }
