--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,4 +1,5 @@
 h1 {
+  margin: 0;
   margin-top: 20px;
 }
 
@@ -6,8 +7,4 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-top {
-  margin-bottom: 20px;
 }
