--- a/src/Components/PanelOne.css
+++ b/src/Components/PanelOne.css
@@ -1,4 +1,11 @@
-.shared {
+.panelone-container {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+Card:hover {
+  background-color: hsl(230, 22%, 74%);
+  cursor: pointer;
 }
